gvfs-ls: added option to output URIs

Add a new -u option to gvfs-ls utility which will make it output
properly escaped URIs. These URIs may then be passed to other gvfs-*
tools.

Signed-off-by: Ihar Hrachyshka <ihar.hrachyshka@gmail.com>

https://bugzilla.gnome.org/show_bug.cgi?id=683295